# TreeMap-Disk-Visualizer

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.claude/: launch.json
.github/workflows/: release.yml
deploy/: treemap.service
electron/: main.js  preload.js
native/ntfs-mft-scan/: Cargo.toml
native/ntfs-mft-scan/src/: main.rs
public/: index.html
scripts/: afterPack.js  bench-store.ts  buildNtfsMftScan.js  fetchGdu.js  gen-tray-icon.js  ntfsMftBroker.ps1  sendToRecycleBin.ps1
src/: index.ts  server.ts
src/api/: activityRoutes.ts  (+13 more)
tests/: agentErgonomics.test.ts  apiHardening.test.ts  appAttribution.test.ts  auth.test.ts  cloud.test.ts  containers.test.ts  discoverability.test.ts  forecast.test.ts  gduMapper.test.ts  gduScanner.test.ts  goldenResponses.test.ts  incrementalRescan.test.ts  mcp.test.ts  mountBoundaries.test.ts  ntfsMftIndexStore.test.ts  ntfsMftInvalidation.test.ts  ntfsMftJournalApply.test.ts  ntfsMftMapper.test.ts  ntfsMftScanner.test.ts  ntfsMftWarmPath.fallback.test.ts  ntfsMftWarmPath.test.ts  offload.test.ts  packedStore.test.ts  platformCommands.test.ts  pruneTree.test.ts  pruneTreeStress.test.ts  reportXlsx.test.ts  safetyRails.test.ts  scanCancel.test.ts  scanEviction.test.ts  scanProgress.test.ts  scanQueries.test.ts  scanStatsPayload.test.ts  scanStore.test.ts  scanSubtree.test.ts  scanTimingLog.test.ts  snapshotTrees.test.ts  sse.test.ts  watcher.test.ts  whatsNew.test.ts
(+78 files in other folders)
