[package]
name = "ntfs-mft-scan"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ntfs-reader = "0.4.5"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
] }

[profile.release]
opt-level = 3
